--- a/prueba.html
+++ b/prueba.html
@@ -10,7 +10,7 @@
 <!-- include ar.js for A-Frame -->
 <button id="play-button">Play</button>
 <body style='margin : 0px; overflow: hidden;'>
-  <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: true; cameraParametersUrl: calibracion.dat;' vr-mode-ui="enabled: false; detectionMode: mono;">
+  <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: true; cameraParametersUrl: calibracion.dat; sourceWidth: 800; sourceHeight: 600' vr-mode-ui="enabled: false; detectionMode: mono;">
     <!-- create your content here. just a box for now -->
 	<a-assets>
 
@@ -29,7 +29,7 @@
 
     </a-marker>
 
-      <a-entity camera zoom="1"></a-entity>
+      <a-entity camera></a-entity>
   </a-scene>
 <script>
 var video = document.getElementById('video');
