--- a/prueba.html
+++ b/prueba.html
@@ -10,7 +10,7 @@
 <!-- include ar.js for A-Frame -->
 <button id="play-button">Play</button>
 <body style='margin : 0px; overflow: hidden;'>
-  <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: true; cameraParametersUrl: calibracion.dat; sourceWidth: 800; sourceHeight: 600' vr-mode-ui="enabled: false; detectionMode: mono;">
+  <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: true; cameraParametersUrl: calibracion.dat; sourceWidth: 640; sourceHeight: 480; maxDetectionRate:20;' vr-mode-ui="enabled: false; detectionMode: mono;">
     <!-- create your content here. just a box for now -->
 	<a-assets>
 
@@ -25,7 +25,7 @@
  	</a-assets>
       
     <a-marker preset='hiro'>
-	  <a-video src="#video"  position="0 0 0" rotation="-90 0 0" scale="10 10 10"></a-video>
+	  <a-video src="#video"  position="0 0 0" rotation="-90 0 0" scale="8 8 8"></a-video>
 
     </a-marker>
 
