--- a/prueba.html
+++ b/prueba.html
@@ -10,7 +10,7 @@
 <!-- include ar.js for A-Frame -->
 <button id="play-button">Play</button>
 <body style='margin : 0px; overflow: hidden;'>
-  <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: true; cameraParametersUrl: calibracion.dat; sourceWidth: 850; sourceHeight: 480; maxDetectionRate:20; detectionMode: mono' vr-mode-ui="enabled: false ">
+  <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false; cameraParametersUrl: calibracion.dat; sourceWidth: 850; sourceHeight: 480; maxDetectionRate:20; detectionMode: mono' vr-mode-ui="enabled: false ">
     <!-- create your content here. just a box for now -->
 	<a-assets>
 
@@ -29,7 +29,7 @@
 
     </a-marker>
 
-      <a-entity camera></a-entity>
+      <a-entity camera="zoom: 0.5"></a-entity>
   </a-scene>
 <script>
 var video = document.getElementById('video');
