--- a/prueba.html
+++ b/prueba.html
@@ -10,7 +10,7 @@
 <!-- include ar.js for A-Frame -->
 <button id="play-button">Play</button>
 <body style='margin : 0px; overflow: hidden;'>
-  <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false; cameraParametersUrl: calibracion.dat; sourceWidth: 850; sourceHeight: 480; maxDetectionRate:20; detectionMode: mono' vr-mode-ui="enabled: false ">
+  <a-scene embedded arjs='sourceType: webcam; debugUIEnabled: false; cameraParametersUrl: calibracion.dat; maxDetectionRate:20; detectionMode: mono' vr-mode-ui="enabled: false ">
     <!-- create your content here. just a box for now -->
 	<a-assets>
 
@@ -24,12 +24,14 @@
 
  	</a-assets>
       
-    <a-marker preset='hiro'>
+        <a-anchor>
+
 	  <a-video src="#video"  position="0 0 0" rotation="-90 0 0" scale="8 8 8"></a-video>
+        </a-anchor>
 
-    </a-marker>
 
-      <a-entity camera="fov:120"></a-entity>
+	        <a-camera-static/>
+
   </a-scene>
 <script>
 var video = document.getElementById('video');
