--- a/webcam.html
+++ b/webcam.html
@@ -71,9 +71,9 @@ pagina = pagina.split("=")[1];
 //var pagina = query.searchParams.get("pagina");
 if(pagina == "tablet") {
 	placas_path = placas_path + "tablet/";
-	var placas = ["@PLACA7-SF.webm", "@PLACA6B-SF.webm", "@PLACA6C-SF.webm", "@PLACA8A-SF.webm", "@PLACA8B-SF.webm", "@PLACA8C-SF.webm", "@PLACA8D-SF.webm"];
+	var placas = ["@PLACA6A-SF.webm", "@PLACA6B-SF.webm", "@PLACA6C-SF.webm", "@PLACA8A-SF.webm", "@PLACA8B-SF.webm", "@PLACA8C-SF.webm", "@PLACA8D-SF.webm"];
 } else {
-	var placas = ["@PLACA9A-SF.webm", "@PLACA9B-SF.webm", "@PLACA10A-SF.webm", "@PLACA10B-SF.webm", "@PLACA10C-SF.webm", "@PLACA10D-SF.webm", "@PLACA11-SF.webm"];
+	var placas = ["@PLACA7-SF.webm", "@PLACA9B-SF.webm", "@PLACA10A-SF.webm", "@PLACA10B-SF.webm", "@PLACA10C-SF.webm", "@PLACA10D-SF.webm", "@PLACA11-SF.webm"];
 
 }
 
