--- a/ar.html
+++ b/ar.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" type="text/css" href="styles.css" />
   <script src="lib/jquery.min.js"></script>
   <script src="lib/aframe.min.js"></script>
-  <script src="lib/aframe-ar.js"></script>
+  <script src="lib/aframe-ar.js"></script> 
   <script src="lib/aframe-html-shader.min.js"></script>
   <script src="arController.js"></script>
   <script src="jsonUtils.js"></script>
@@ -16,20 +16,30 @@
 
 
 <body style='margin : 0px; overflow: hidden;'>
-    <a href="index.html"><div class="menu-overlay"></div></a>  
-      <ul id="checklist" class="checklist" style="list-style-type:square">
+    <a id="playButton" onclick="firstPlay()"><div class="btn btn-primary play-overlay menu-overlay"></div></a>  
+      <ul id="checklist" class="checklist" style="list-style-type:none">
         </ul>
+       <!--  <a id="playButton" onclick="firstPlay()" class="btn btn-primary play-overlay"></a>-->
+        
 
-    <a-scene markerhandler embedded arjs='sourceType: webcam; debugUIEnabled: false;' vr-mode-ui="enabled: false">
-      <a-entity light="type: directional; color: #f1f0dd; intensity: 1.2" position="-2.102 1.443 3.303"></a-entity>
-      <a-marker id="kanji" preset='kanji'></a-marker>
-      <a-marker id="hiro" preset='hiro'></a-marker>
-      <a-entity camera mouse-cursor >
+  <!--<a-scene id="scene" markerhandler embedded arjs='sourceType: webcam; debugUIEnabled: false;  detectionMode: mono_and_matrix; matrixCodeType: 3x3_PARITY65; cameraParametersUrl=calibracion.dat' vr-mode-ui="enabled: false;">-->
+  <!--<a-scene id="scene" markerhandler embedded arjs='sourceType: webcam; debugUIEnabled: false; cameraParametersUrl=calibracion.dat' vr-mode-ui="enabled: false;">-->
+  <!--<a-scene id="scene" markerhandler embedded arjs='sourceType: image; sourceUrl: bashScripts/demo.jpg ;debugUIEnabled: false;' vr-mode-ui="enabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">-->
+    <a-scene id="scene" markerhandler embedded arjs='sourceType: webcam; debugUIEnabled: false; detectionMode: mono; cameraParametersUrl: calibracion.dat;  maxDetectionRate:20;' vr-mode-ui="enabled: false;">
+      <a-marker id="kanji" type="pattern" preset='kanji'></a-marker>
+
+
+       <!--<a-marker id="stellium"  preset="custom" type="pattern" url="ungs.patt">-->
+        <!--<a-box  color="#4CC3D9" shadow></a-box> -->
+      </a-marker>
+      <a-entity camera mouse-cursor ></a-entity>
         <a-cursor fuse="false" color="yellow"></a-cursor>
       </a-entity>
       </a-scene>
-
+     <!--<div onclick="previous()" class="previousRect"></div>-->
+     <div onclick="next()" class="nextRect"></div>
       
-      <script>run();</script>
+      <script>
+      run();</script>
 </body>
 </html>
