--- a/ar.html
+++ b/ar.html
@@ -20,7 +20,7 @@
         </ul>
 
        <a id="playButton" onclick="firstPlay()" class="btn btn-primary play-overlay"></a>
-    <a-scene id="scene" markerhandler embedded arjs='sourceType:webcam; debugUIEnabled: false; detectionMode: mono; cameraParametersUrl: calibracion.dat;  maxDetectionRate:20;' vr-mode-ui="enabled: false;">
+    <a-scene id="scene" markerhandler embedded arjs='sourceType:webcam; debugUIEnabled: false; detectionMode: mono; cameraParametersUrl: other/calibracion.dat;  maxDetectionRate:20;' vr-mode-ui="enabled: false;">
       <a-marker id="kanji" type="pattern" preset='kanji'></a-marker>
 
       </a-marker>
@@ -28,10 +28,10 @@
         <a-cursor fuse="false" color="yellow"></a-cursor>
       </a-entity>
       </a-scene>
-     <!--<div onclick="previous()" class="previousRect"></div>-->
-     <div onclick="next()" class="nextRect"></div>
+
       
       <script>
+        hideOrShow("playButton");
       run();</script>
 </body>
 </html>
