--- a/ar.html
+++ b/ar.html
@@ -22,6 +22,7 @@
        <a id="playButton" onclick="firstPlay()" class="btn btn-primary play-overlay"></a>
     <a-scene id="scene" markerhandler embedded arjs='sourceType:webcam; debugUIEnabled: false; detectionMode: mono; cameraParametersUrl: other/calibracion.dat;  maxDetectionRate:20;' vr-mode-ui="enabled: false;">
       <a-marker id="kanji" type="pattern" preset='kanji'></a-marker>
+      <a-marker id="hiro" type="pattern" preset='hiro'></a-marker>
 
       </a-marker>
       <a-entity camera mouse-cursor ></a-entity>
