--- a/ar.html
+++ b/ar.html
@@ -26,7 +26,7 @@
 
       </a-marker>
       <a-entity camera mouse-cursor ></a-entity>
-        <a-cursor fuse="true" color="yellow"></a-cursor>
+        <a-cursor fuse="false" color="yellow"></a-cursor>
       </a-entity>
       </a-scene>
 
