--- a/arEmu.html
+++ b/arEmu.html
@@ -6,12 +6,15 @@
   <meta name="Demo Realidad Aumentada" content="MuseoAR">
   <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico" />
   <link rel="stylesheet" type="text/css" href="assets/styles/styles.css" />
+
   <script src="lib/jquery.min.js"></script>
+  <script src="jsonUtils.js"></script>
+  <script>loadJSON('ARjsMultiMarkerFile',function(response){
+      localStorage.setItem('ARjsMultiMarkerFile',JSON.stringify(response));
+  })</script>
   <script src="lib/aframe.min.js"></script>
   <script src="lib/aframe-ar.js"></script> 
-  <script src="lib/aframe-html-shader.min.js"></script>
   <script src="arController.js"></script>
-  <script src="jsonUtils.js"></script>
 </head>
 
 
@@ -22,8 +25,8 @@
   <!--<a-scene id="scene" markerhandler embedded arjs='sourceType: webcam; debugUIEnabled: false;  detectionMode: mono_and_matrix; matrixCodeType: 3x3_PARITY65; cameraParametersUrl=calibracion.dat' vr-mode-ui="enabled: false;">-->
   <!--<a-scene id="scene" markerhandler embedded arjs='sourceType: webcam; debugUIEnabled: false; cameraParametersUrl=calibracion.dat' vr-mode-ui="enabled: false;">-->
   <!--<a-scene id="scene" markerhandler embedded arjs='sourceType: image; sourceUrl: bashScripts/demo.jpg ;debugUIEnabled: false;' vr-mode-ui="enabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">-->
-    <a-scene id="scene" cursor="rayOrigin: mouse" markerhandler embedded arjs='sourceType: image; sourceUrl: other/demo.jpg ; debugUIEnabled: false; detectionMode: mono; maxDetectionRate:20;' vr-mode-ui="enabled: false;">
-      <a-marker id="kanji" type="pattern" preset='kanji'></a-marker>
+    <a-scene id="scene" cursor="rayOrigin: mouse" markerhandler embedded arjs='sourceType: image; sourceUrl: demoARtoolkit.png; debugUIEnabled: false; detectionMode: mono; maxDetectionRate:20;' vr-mode-ui="enabled: false;">
+      <a-marker id="multi" preset='area'></a-marker>
       <a-camera camera>
         <a-cursor ></a-cursor>
        </a-camera>
