--- a/ar.html
+++ b/ar.html
@@ -7,11 +7,14 @@
   <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico" />
   <link rel="stylesheet" type="text/css" href="assets/styles/styles.css" />
   <script src="lib/jquery.min.js"></script>
+  <script src="jsonUtils.js"></script>
+  <script>loadJSON('ARjsMultiMarkerFile',function(response){
+    localStorage.setItem('ARjsMultiMarkerFile',JSON.stringify(response));
+})</script>
   <script src="lib/aframe.min.js"></script>
   <script src="lib/aframe-ar.js"></script> 
-  <script src="lib/aframe-html-shader.min.js"></script>
   <script src="arController.js"></script>
-  <script src="jsonUtils.js"></script>
+
 </head>
 
 
@@ -23,6 +26,7 @@
     <a-scene id="scene" markerhandler embedded arjs='sourceType:webcam; debugUIEnabled: false; detectionMode: mono; cameraParametersUrl: other/calibracion.dat;  maxDetectionRate:20;' vr-mode-ui="enabled: false;">
       <a-marker id="kanji" type="pattern" preset='kanji'></a-marker>
       <a-marker id="hiro" type="pattern" preset='hiro'></a-marker>
+      <a-marker id="multi" preset='area'></a-marker>
 
       </a-marker>
       <a-entity camera mouse-cursor ></a-entity>
