--- a/vr.html
+++ b/vr.html
@@ -22,6 +22,7 @@
         <a-scene markerhandler cursor="rayOrigin: mouse " vr-mode-ui="enabled:true"> 
           <a-entity id="kanji" position="0.37023530085930534 0.723 -3.143" rotation="70 0 0" ></a-entity> 
           <a-entity id="hiro" position="0.37023530085930534 0.723 -3.143" rotation="70 0 0" ></a-entity> 
+          <a-entity id="multi" position="0.37023530085930534 0.723 -3.143" rotation="70 0 0"></a-entity>
         </a-scene> 
         <a-entity camera touch-controls></a-entity>
       </a-entity> 
