--- a/index.html
+++ b/index.html
@@ -14,5 +14,5 @@
   <body style='margin : 0px; overflow: hidden;'>
 
           <script>
-            window.location.href = "menu.html?trafoCheckList";</script>
+            window.location.href = "menu.html?mapa";</script>
 </html>
