--- a/ar.html
+++ b/ar.html
@@ -21,6 +21,14 @@
 <body style='margin : 0px; overflow: hidden;'>
       <ul id="checklist" class="checklist" style="list-style-type:none">
         </ul>
+        <div class="scanningSpinner">
+          <label>
+            Scanning
+          </label>
+          <div class="rect1"></div>
+          <div class="rect2"></div>
+          <div class="rect3"></div>
+        </div>
 
        <a id="playButton" onclick="firstPlay()" class="btn btn-primary play-overlay"></a>
     <a-scene id="scene" markerhandler embedded arjs='sourceType:webcam; debugUIEnabled: false; detectionMode: mono; cameraParametersUrl: other/calibracion.dat;  maxDetectionRate:20;' vr-mode-ui="enabled: false;">
