--- a/ar.html
+++ b/ar.html
@@ -31,6 +31,7 @@
     <div class="rect3"></div>
   </div>
 
+
   <a id="playButton" onclick="firstPlay()" class="btn btn-primary play-overlay"></a>
   <a-scene id="scene" markerhandler embedded arjs='sourceType:webcam; debugUIEnabled: false; detectionMode: mono; cameraParametersUrl: other/calibracion.dat;  maxDetectionRate:20;'
     vr-mode-ui="enabled: false;">
@@ -40,7 +41,7 @@
 
     </a-marker>
     <a-entity camera mouse-cursor></a-entity>
-    <a-cursor fuse="false" color="yellow"></a-cursor>
+    <a-cursor id="cursor" visible="false" fuse="false" color="yellow"></a-cursor>
     </a-entity>
   </a-scene>
 
