--- a/ar.html
+++ b/ar.html
@@ -1,45 +1,54 @@
 <html>
+
 <head>
   <title>
     MuseoAR
   </title>
   <meta name="Demo Realidad Aumentada" content="MuseoAR">
   <link rel="shortcut icon" type="image/x-icon" href="assets/images/favicon.ico" />
-  <link rel="stylesheet" type="text/css" href="styles.css" />
+  <link rel="stylesheet" type="text/css" href="assets/styles/styles.css" />
   <script src="lib/jquery.min.js"></script>
-  <script src="lib/aframe.min.js"></script>
-  <script src="lib/aframe-ar.js"></script> 
-  <script src="lib/aframe-html-shader.min.js"></script>
-  <script src="arController.js"></script>
   <script src="jsonUtils.js"></script>
+  <script>loadJSON('ARjsMultiMarkerFile', function (response) {
+      localStorage.setItem('ARjsMultiMarkerFile', JSON.stringify(response));
+    })</script>
+  <script src="lib/aframe.min.js"></script>
+  <script src="lib/aframe-ar.js"></script>
+  <script src="arController.js"></script>
+
 </head>
 
 
 <body style='margin : 0px; overflow: hidden;'>
-    <a id="playButton" onclick="firstPlay()"><div class="btn btn-primary play-overlay menu-overlay"></div></a>  
-      <ul id="checklist" class="checklist" style="list-style-type:none">
-        </ul>
-       <!--  <a id="playButton" onclick="firstPlay()" class="btn btn-primary play-overlay"></a>-->
-        
+  <ul id="checklist" class="checklist" style="list-style-type:none">
+  </ul>
+  <div class="scanningSpinner">
+    <label>
+      Scanning
+    </label>
+    <div class="rect1"></div>
+    <div class="rect2"></div>
+    <div class="rect3"></div>
+  </div>
 
-  <!--<a-scene id="scene" markerhandler embedded arjs='sourceType: webcam; debugUIEnabled: false;  detectionMode: mono_and_matrix; matrixCodeType: 3x3_PARITY65; cameraParametersUrl=calibracion.dat' vr-mode-ui="enabled: false;">-->
-  <!--<a-scene id="scene" markerhandler embedded arjs='sourceType: webcam; debugUIEnabled: false; cameraParametersUrl=calibracion.dat' vr-mode-ui="enabled: false;">-->
-  <!--<a-scene id="scene" markerhandler embedded arjs='sourceType: image; sourceUrl: bashScripts/demo.jpg ;debugUIEnabled: false;' vr-mode-ui="enabled: false; detectionMode: mono_and_matrix; matrixCodeType: 3x3;">-->
-    <a-scene id="scene" markerhandler embedded arjs='sourceType: webcam; debugUIEnabled: false; detectionMode: mono; cameraParametersUrl: calibracion.dat;  maxDetectionRate:20;' vr-mode-ui="enabled: false;">
-      <a-marker id="kanji" type="pattern" preset='kanji'></a-marker>
+
+  <a id="playButton" onclick="firstPlay()" class="btn btn-primary play-overlay"></a>
+  <a-scene id="scene" markerhandler embedded arjs='sourceType:webcam; debugUIEnabled: false; detectionMode: mono; cameraParametersUrl: other/calibracion.dat;  maxDetectionRate:20;'
+    vr-mode-ui="enabled: false;">
+    <a-marker id="kanji" type="pattern" preset='kanji'></a-marker>
+    <a-marker id="hiro" type="pattern" preset='hiro'></a-marker>
+    <a-marker id="multi" preset='area'></a-marker>
+
+    </a-marker>
+    <a-entity camera mouse-cursor></a-entity>
+    <a-cursor id="cursor" visible="false" fuse="false" color="yellow"></a-cursor>
+    </a-entity>
+  </a-scene>
 
 
-       <!--<a-marker id="stellium"  preset="custom" type="pattern" url="ungs.patt">-->
-        <!--<a-box  color="#4CC3D9" shadow></a-box> -->
-      </a-marker>
-      <a-entity camera mouse-cursor ></a-entity>
-        <a-cursor fuse="false" color="yellow"></a-cursor>
-      </a-entity>
-      </a-scene>
-     <!--<div onclick="previous()" class="previousRect"></div>-->
-     <div onclick="next()" class="nextRect"></div>
-      
-      <script>
-      run();</script>
+  <script>
+    hideOrShow("playButton");
+    run();</script>
 </body>
+
 </html>
