--- a/ar.html
+++ b/ar.html
@@ -14,7 +14,7 @@
     })</script>
   <script src="lib/aframe.min.js"></script>
   <script src="lib/aframe-ar.js"></script>
-  <script src="arController.js"></script>
+  <script src="Controller.js"></script>
 
 </head>
 
